<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FitTravel</string>
    <string name="action_settings">Settings</string>
	<string name="settings_title_label">Settings</string>
	<string name="measurement_title_label">Prefer Metric?</string>
	<string name="fitbit_title_label">Your Fitbit</string>
	<string name="fitbit_link_label">Connect your Fitbit</string>
	<string name="fitbit_clear_label">Remove Fitbit account from this app</string>
	<string name="fitbit_sync_button">Sync now</string>
	<string name="change_starting">Change starting location</string>
	<string name="change_ending">Change ending location</string>
	<string name="new_trip_button">New trip</string>
	<string name="new_trip_title">Create your trip</string>
	<string name="new_location_title">Enter new location</string>
	<string name="trip_start_hint">Enter starting location</string>
	<string name="trip_end_hint">Enter ending location</string>
    <string name="splash_title">FitTravel</string>
    <string name="no_fitbit">No Fitbit found, click to connect!</string>
    <string name="search_hint">Search Places</string>
    <string name="search_settings">Search Places</string>
    <string name="action_search">Search</string>
    
</resources>
