<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/settings_title_label"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        
        
    </LinearLayout>
    
    
      <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        >
        
        
        
    </LinearLayout>
    <Button
        android:id="@+id/button_change_starting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_starting"
        />
    
    <Button 
        android:id="@+id/button_change_ending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_ending"
        />
    
    <Button 
        android:id="@+id/button_new_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_trip_button"/>

</LinearLayout>